schema/testdata/validation_delete_operation_unique_lookup_in_wheres/schema.keel
model MyModel {
    fields {
        nonUnique Text
        code Text @unique
    }

    operations {
        delete deleteMyModel() {
            @where(myModel.nonUnique == "something")
            @where(myModel.code == "sdsd")
        }
    }
}